--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">	
 </head>
 <body>
-	<div class="container">
+	
 		<nav class="navbar" role="navigation">
+      <div class="container">
 			<div class="navbar-header">
-				<a class="navbar-brand mlogo">ST</a>
+        <a class="navbar-brand mlogo trns">ST</a>
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collase-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -27,17 +28,24 @@
         <li><a href="#">About</a></li>
         <li><a href="#">Skills</a></li>
         <li><a href="#">Work</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Connect <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">LinkedIn</a></li>
-            <li><a href="#">Mail</a></li>
-          </ul>
-        </li>
+        <li class="dropdown"><a data-toggle="dropdown" class="dropdown-toggle" href="#">Connect with Me <span class="caret"></span></a>
+					<ul role="menu" class="dropdown-menu list-inline">
+						<li><a href="#"><div class="morph nav-pic"><img src="asset/fb.png" alt="Facebook" class="icon-pic"></img></div></a></li>
+						<li><a href="#"><div class="morph nav-pic"><img src="asset/tw.png" alt="Twitter" class="icon-pic"></img></div></a></li> 
+						<li><a href="#"><div class="morph nav-pic"><img src="asset/tm.png" alt="Tumbler" class="icon-pic"></img></div></a></li> 
+					</ul>
+				</li>
+			
       </ul>
       </div>
+      </div>
 		</nav>
-	</div>
+    <div class="container-fluid">
+      <div class="jumbotron">
+        <a class="container-title">About me</a>
+        <p>I am passionate web developer</p>
+      </div>
+    </div>
+	
 </body>
 </html>
