With header fix and complete about me

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
         <li><a href="#">Work</a></li>
         <li class="dropdown"><a data-toggle="dropdown" class="dropdown-toggle" href="#">Connect with Me <span class="caret"></span></a>
 					<ul role="menu" class="dropdown-menu list-inline">
-						<li><a href="#"><div class="morph nav-pic"><img src="asset/fb.png" alt="Facebook" class="icon-pic"></img></div></a></li>
-						<li><a href="#"><div class="morph nav-pic"><img src="asset/tw.png" alt="Twitter" class="icon-pic"></img></div></a></li> 
-						<li><a href="#"><div class="morph nav-pic"><img src="asset/tm.png" alt="Tumbler" class="icon-pic"></img></div></a></li> 
-					</ul>
+					<li><a href="mailto:shivam.tripathi3@outlook.com"><div class="morph nav-pic"><img src="asset/eml.png" alt="E-mail" class="icon-pic"></img></div></a></li> 
+						<li><a href="https://www.linkedin.com/in/shivam-tripathi-4b56606a"><div class="morph nav-pic"><img src="asset/ln.png" alt="LinkedIn" class="icon-pic"></img></div></a></li> 
+            	<li><a href="https://www.facebook.com/shivamtheknight"><div class="morph nav-pic"><img src="asset/fb.png" alt="Facebook" class="icon-pic"></img></div></a></li>
+        	</ul>
 				</li>
 			
       </ul>
@@ -43,7 +43,17 @@
     <div class="container-fluid">
       <div class="jumbotron">
         <a class="container-title">About me</a>
-        <p>I am passionate web developer</p>
+        <p>I am a passionate web developer(Full Stack), working as Senior Software Engineer (living in Bangalore, Karnataka India).<br/>
+        I have worked on different enterprice web application for various multinational clients.<br/>
+        I like to work on emerging techntologies. I am able to work in a team or as an individual.<br/>
+        I focus on user problems and provide genuine solutions.
+        </p>
+        <p>
+          In day to day work I enjoy working on complex web development work using latest technologies and tools.<br/>
+          I enjoy doing hands on with new programming languages and frameworks.<br/>
+          But by the end of the day my daily deliverables matter most to me.
+        </p>
+        <p>I love to start my work with a cup of coffee and in between the work I find time to relax my mind with connecting new people and listening to the music.
       </div>
     </div>
 	
