With skill and checking h1 in mobile

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 			</div><div class="collapse navbar-collapse" id="navbar-collase-1">
       <ul class="nav navbar-nav navbar-right">
         
-        <li><a href="#">About</a></li>
-        <li><a href="#">Skills</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
         <li><a href="#">Work</a></li>
         <li class="dropdown"><a data-toggle="dropdown" class="dropdown-toggle" href="#">Connect with Me <span class="caret"></span></a>
 					<ul role="menu" class="dropdown-menu list-inline">
@@ -40,7 +40,7 @@
       </div>
       </div>
 		</nav>
-    <div class="container-fluid">
+    <div class="container-fluid fill" id="about">
       <div class="jumbotron">
         <a class="container-title">About me</a>
         <p>I am a passionate web developer(Full Stack), working as Senior Software Engineer (living in Bangalore, Karnataka India).<br/>
@@ -55,6 +55,34 @@
         </p>
         <p>I love to start my work with a cup of coffee and in between the work I find time to relax my mind with connecting new people and listening to the music.
       </div>
+    </div>
+    <div class="container" id="skills">
+          <div class="jumbotron">
+              <div class="media">
+                <div class="media-left media-middle">
+                  <h1><span class="label label-primary">Language</span><br/> <em>and</em> <br/><span class="label label-info"> Frameworks</span></h1>
+
+                </div>
+                <div class="media-body">
+                    <ul class="list-group skill-list">
+                        <li class="list-group-item list-group-item-success">J2EE</li>
+                        <li class="list-group-item list-group-item-success">HTML5</li>
+                        <li class="list-group-item list-group-item-success">CSS3</li>
+                        <li class="list-group-item list-group-item-success">jquery</li>
+                        <li class="list-group-item list-group-item-success">Javascript</li>
+                        <li class="list-group-item list-group-item-success">Bootstrap</li>
+                        <li class="list-group-item list-group-item-success">Spring3.0</li>
+                        <li class="list-group-item list-group-item-success">Hibernate</li>
+                        <li class="list-group-item list-group-item-success">JSF2.0 (Primefaces)</li> 
+                        <li class="list-group-item list-group-item-success">AngularJS</li>
+                        <li class="list-group-item list-group-item-success">JSP</li>
+                        <li class="list-group-item list-group-item-success">Servlet</li>
+                        <li class="list-group-item list-group-item-success">Perl</li> 
+                    </ul>
+                </div>
+              </div>
+              
+          </div>
     </div>
 	
 </body>
