Changed with logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<nav class="navbar navbar-static-top" role="navigation">
       <div class="container">
 			<div class="navbar-header">
-        <a class="navbar-brand mlogo trns">ST</a>
+        <a href="#" class="mlogo">ST</a>
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collase-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
@@ -43,13 +43,13 @@
     <div class="container-fluid">
       <div class="page-header home">
         <h1>Shivam Tripathi</h1>
-        <p>Web Developer</p>
-        <p><a href="#skills" class="label label-primary">Skills</a></p>
+        <p>Web Designer and Full Stack Java developer</p>
+        <p><a href="#about" class="label label-primary">About me</a></p>
       </div>
 
     </div>
-    <div class="container-fluid fill" id="about">
-      <div class="jumbotron">
+    <div class="container-fluid" id="about">
+      <div class="jumbotron abt">
         <a class="container-title">About me</a>
         <p>I am a passionate web developer(Full Stack), working as Senior Software Engineer (living in Bangalore, Karnataka India).<br/>
         I have worked on different enterprice web application for various multinational clients.<br/>
@@ -61,7 +61,8 @@
           I enjoy doing hands on with new programming languages and frameworks.<br/>
           But by the end of the day my daily deliverables matter most to me.
         </p>
-        <p>I love to start my work with a cup of coffee and in between the work I find time to relax my mind with connecting new people and listening to the music.
+        <p>I love to start my work with a cup of coffee and in between the work I find time to relax my mind with connecting new people and listening to the music.</p>
+          <p><a href="#skills" class="label label-primary">My Skills</a></p>
       </div>
     </div>
     <div class="container" id="skills">
