--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<nav class="navbar navbar-static-top" role="navigation">
       <div class="container">
 			<div class="navbar-header">
-        <a href="#" class="mlogo">ST</a>
+     <!--   <a href="#" class="mlogo">ST</a> -->
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collase-1">
         <span class="sr-only">Toggle navigation</span>
         <span class="icon-bar"></span>
