--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       <div class="jumbotron abt">
         <a class="container-title">About me</a>
         <p>I am a passionate web developer(Full Stack), working as Senior Software Engineer (living in Bangalore, Karnataka India).<br/>
-        I have worked on different enterprice web application for various multinational clients.<br/>
+        I have worked on different enterprise web application for various multinational clients.<br/>
         I like to work on emerging techntologies. I am able to work in a team or as an individual.<br/>
         I focus on user problems and provide genuine solutions.
         </p>
@@ -69,7 +69,7 @@
           
               <div class="media">
                 <div class="media-left media-middle">
-                  <h1><span class="label label-primary">Language</span><br/> <em>and</em> <br/><span class="label label-info"> Frameworks</span></h1>
+                  <h1><span class="label label-primary">Language</span><br/> <em></em> <br/><span class="label label-info"> Frameworks</span></h1>
 
                 </div>
                 <div class="media-body">
