With JS file and top scroll

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 	crossorigin="anonymous"></script>
 	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.css" rel="stylesheet">	
+	<script type="text/javascript" src="js/shivam-code.js"></script>
 </head>
 <body>
 	
 		<nav class="navbar navbar-static-top" role="navigation">
-      <div class="container">
+      <div class="container" id="home">
 			<div class="navbar-header">
      <!--   <a href="#" class="mlogo">ST</a> -->
 				<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collase-1">
@@ -44,7 +45,6 @@
       <div class="page-header home">
         <h1>Shivam Tripathi</h1>
         <p>Web Designer and Full Stack Java developer</p>
-        <p><a href="#about" class="label label-primary">About me</a></p>
       </div>
 
     </div>
@@ -62,7 +62,6 @@
           But by the end of the day my daily deliverables matter most to me.
         </p>
         <p>I love to start my work with a cup of coffee and in between the work I find time to relax my mind with connecting new people and listening to the music.</p>
-          <p><a href="#skills" class="label label-primary">My Skills</a></p>
       </div>
     </div>
     <div class="container" id="skills">
@@ -93,6 +92,8 @@
               
          
     </div>
-	
+	<div class="scroll-page">
+		<a href="#home"><img alt="Back" src="img/btp.png" class="img-fluid"></a>
+	</div>
 </body>
 </html>
