with asset change

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
          
     </div>
 	<div class="scroll-page">
-		<a href="#home"><img alt="Back" src="img/btp.png" class="img-fluid"></a>
+		<a href="#home"><img alt="Back" src="asset/btp.png" class="img-fluid"></a>
 	</div>
 </body>
 </html>
