--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
         <li><a href="#">Work</a></li>
         <li class="dropdown"><a data-toggle="dropdown" class="dropdown-toggle" href="#">Connect with Me <span class="caret"></span></a>
 					<ul role="menu" class="dropdown-menu list-inline">
-					<li><a href="mailto:shivam.tripathi3@outlook.com"><div class="morph nav-pic"><img src="asset/eml.png" alt="E-mail" class="icon-pic"></img></div></a></li> 
-						<li><a href="https://www.linkedin.com/in/shivam-tripathi-4b56606a"><div class="morph nav-pic"><img src="asset/ln.png" alt="LinkedIn" class="icon-pic"></img></div></a></li> 
-            	<li><a href="https://www.facebook.com/shivamtheknight"><div class="morph nav-pic"><img src="asset/fb.png" alt="Facebook" class="icon-pic"></img></div></a></li>
+					<li><a href="mailto:shivam.tripathi3@outlook.com"><div class="morph nav-pic"><img src="img/eml.png" alt="E-mail" class="icon-pic"></img></div></a></li> 
+						<li><a href="https://www.linkedin.com/in/shivam-tripathi-4b56606a"><div class="morph nav-pic"><img src="img/ln.png" alt="LinkedIn" class="icon-pic"></img></div></a></li> 
+            	<li><a href="https://www.facebook.com/shivamtheknight"><div class="morph nav-pic"><img src="img/fb.png" alt="Facebook" class="icon-pic"></img></div></a></li>
         	</ul>
 				</li>
 			
@@ -93,7 +93,7 @@
          
     </div>
 	<div class="scroll-page">
-		<a href="#home"><img alt="Back" src="asset/btp.png" class="img-fluid"></a>
+		<a href="#home"><img alt="Back" src="img/btp.png" class="img-fluid"></a>
 	</div>
 </body>
 </html>
