Change in skills and header

--- a/index.html
+++ b/index.html
@@ -16,15 +16,14 @@
 </head>
 <body>
 
-	<nav class="navbar navbar-static-top" role="navigation">
+	<nav class="navbar navbar-static-top navbar-default" role="navigation">
 		<div class="container" id="home">
 			<div class="navbar-header">
 				<!--   <a href="#" class="mlogo">ST</a> -->
 				<button type="button" class="navbar-toggle collapsed"
 					data-toggle="collapse" data-target="#navbar-collase-1">
-					<span class="sr-only">Toggle navigation</span> <span
-						class="icon-bar"></span> <span class="icon-bar"></span> <span
-						class="icon-bar"></span>
+					<span class="sr-only"></span> <span class="icon-bar"></span> <span
+						class="icon-bar"></span> <span class="icon-bar"></span>
 				</button>
 			</div>
 			<div class="collapse navbar-collapse" id="navbar-collase-1">
@@ -37,15 +36,12 @@
 						class="dropdown-toggle" href="#">Connect with Me <span
 							class="caret"></span></a>
 						<ul role="menu" class="dropdown-menu list-inline">
-							<li><a href="mailto:shivam.tripathi3@outlook.com"><div
-										class="morph nav-pic">
+							<li><a href="mailto:shivam.tripathi3@outlook.com"><div class="morph nav-pic">
 										<img src="img/eml.png" alt="E-mail" class="icon-pic"></img>
 									</div></a></li>
 							<li><a
-								href="https://www.linkedin.com/in/shivam-tripathi-4b56606a"><div
-										class="morph nav-pic">
-										<img src="img/ln.png" alt="LinkedIn" class="icon-pic"></img>
-									</div></a></li>
+								href="https://www.linkedin.com/in/shivam-tripathi-4b56606a">
+								<div class="morph nav-pic"><img src="img/ln.png" alt="LinkedIn" class="icon-pic"></img></div></a></li>
 							<li><a href="https://www.facebook.com/shivamtheknight"><div
 										class="morph nav-pic">
 										<img src="img/fb.png" alt="Facebook" class="icon-pic"></img>
@@ -63,9 +59,10 @@
 		</div>
 
 	</div>
-	<div class="container-fluid" id="about">
-		<div class="jumbotron abt">
-			<a class="container-title">About me</a>
+	<div class="container-fluid abt" id="about">
+		<a class="container-title">About me</a>
+		<div class="jumbotron">
+
 			<p>
 				I am a passionate web developer(Full Stack), working as Senior
 				Software Engineer (living in Bangalore, Karnataka India).<br /> I
@@ -85,32 +82,32 @@
 				listening to the music.</p>
 		</div>
 	</div>
-	<div class="container" id="skills">
-
+	<div class="container abt" id="skills">
+		<a class="container-title">My Skills</a>
 		<div class="media">
 			<div class="media-left media-middle">
 				<h1>
-					<span class="label label-primary">Language</span><br /> <em></em> <br />
-					<span class="label label-info"> Frameworks</span>
+					<span class="label label-primary">Language</span><br /> <em></em>
+					<br /> <span class="label label-info"> Frameworks</span>
 				</h1>
 
 			</div>
 			<div class="media-body">
-				<ul class="list-group skill-list">
-					<li class="list-group-item list-group-item-success">J2EE</li>
-					<li class="list-group-item list-group-item-success">HTML5</li>
-					<li class="list-group-item list-group-item-success">CSS3</li>
-					<li class="list-group-item list-group-item-success">jquery</li>
-					<li class="list-group-item list-group-item-success">Javascript</li>
-					<li class="list-group-item list-group-item-success">Bootstrap</li>
-					<li class="list-group-item list-group-item-success">Spring3.0</li>
-					<li class="list-group-item list-group-item-success">Hibernate</li>
-					<li class="list-group-item list-group-item-success">JSF2.0
-						(Primefaces)</li>
-					<li class="list-group-item list-group-item-success">AngularJS</li>
-					<li class="list-group-item list-group-item-success">JSP</li>
-					<li class="list-group-item list-group-item-success">Servlet</li>
-					<li class="list-group-item list-group-item-success">Perl</li>
+				<ul class="skill-list ">
+					<li class="">J2EE</li>
+					<li class="">HTML5</li>
+					<li class="">CSS3</li>
+					<li class="">jquery</li>
+					<li class="">Javascript</li>
+					<li class="">Bootstrap</li>
+					<li class="">Spring3.0</li>
+
+					<li class="">Hibernate</li>
+					<li class="">JSF2.0 (Primefaces)</li>
+					<li class="">AngularJS</li>
+					<li class="">JSP</li>
+					<li class="">Servlet</li>
+					<li class="">Perl</li>
 				</ul>
 			</div>
 		</div>
