--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <script type="text/javascript" src="js/shivam-code.js"></script>
 </head>
 <body>
-
+		<div class="container-fluid">
 	<nav class="navbar navbar-static-top navbar-default" role="navigation">
-		<div class="container" id="home">
+		<div class="container-fluid" id="home">
 			<div class="navbar-header">
 				<!--   <a href="#" class="mlogo">ST</a> -->
 				<button type="button" class="navbar-toggle collapsed"
@@ -36,12 +36,16 @@
 						class="dropdown-toggle" href="#">Connect with Me <span
 							class="caret"></span></a>
 						<ul role="menu" class="dropdown-menu list-inline">
-							<li><a href="mailto:shivam.tripathi3@outlook.com"><div class="morph nav-pic">
+							<li><a href="mailto:shivam.tripathi3@outlook.com"><div
+										class="morph nav-pic">
 										<img src="img/eml.png" alt="E-mail" class="icon-pic"></img>
 									</div></a></li>
 							<li><a
 								href="https://www.linkedin.com/in/shivam-tripathi-4b56606a">
-								<div class="morph nav-pic"><img src="img/ln.png" alt="LinkedIn" class="icon-pic"></img></div></a></li>
+									<div class="morph nav-pic">
+										<img src="img/ln.png" alt="LinkedIn" class="icon-pic"></img>
+									</div>
+							</a></li>
 							<li><a href="https://www.facebook.com/shivamtheknight"><div
 										class="morph nav-pic">
 										<img src="img/fb.png" alt="Facebook" class="icon-pic"></img>
@@ -52,7 +56,7 @@
 			</div>
 		</div>
 	</nav>
-	<div class="container-fluid">
+
 		<div class="page-header home">
 			<h1>Shivam Tripathi</h1>
 			<p>Web Designer and Full Stack Java developer</p>
