--- a/index.html
+++ b/index.html
@@ -15,51 +15,59 @@
 <script type="text/javascript" src="js/shivam-code.js"></script>
 </head>
 <body>
-		<div class="container-fluid">
-	<nav class="navbar navbar-static-top navbar-default" role="navigation">
-		<div class="container-fluid" id="home">
-			<div class="navbar-header">
-				<!--   <a href="#" class="mlogo">ST</a> -->
-				<button type="button" class="navbar-toggle collapsed"
-					data-toggle="collapse" data-target="#navbar-collase-1">
-					<span class="sr-only"></span> <span class="icon-bar"></span> <span
-						class="icon-bar"></span> <span class="icon-bar"></span>
-				</button>
+	<div class="container-fluid" id="home">
+		<nav class="navbar navbar-static-top navbar-default" role="navigation">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<!-- <div class="home-logo">
+				<a href="#home"><img alt="home" src="img/home.png"></a> </div> -->
+					<button type="button" class="navbar-toggle collapsed"
+						data-toggle="collapse" data-target="#navbar-collase-1">
+						<span class="sr-only"></span> <span class="icon-bar"></span> <span
+							class="icon-bar"></span> <span class="icon-bar"></span>
+					</button>
+				</div>
+				<div class="collapse navbar-collapse" id="navbar-collase-1">
+					<ul class="nav navbar-nav navbar-right">
+
+						<li><a href="#about">About</a></li>
+						<li><a href="#skills">Skills</a></li>
+						<li><a href="#">Work</a></li>
+						<li class="dropdown"><a data-toggle="dropdown"
+							class="dropdown-toggle" href="#">Connect with Me <span
+								class="caret"></span></a>
+							<ul role="menu" class="dropdown-menu list-inline">
+								<li><a href="mailto:shivam.tripathi3@outlook.com"><div
+											class="morph nav-pic">
+											<img src="img/eml.png" alt="E-mail" class="icon-pic"></img>
+										</div></a></li>
+								<li><a
+									href="https://www.linkedin.com/in/shivam-tripathi-4b56606a">
+										<div class="morph nav-pic">
+											<img src="img/ln.png" alt="LinkedIn" class="icon-pic"></img>
+										</div>
+								</a></li>
+								<li><a href="https://www.facebook.com/shivamtheknight"><div
+											class="morph nav-pic">
+											<img src="img/fb.png" alt="Facebook" class="icon-pic"></img>
+										</div></a></li>
+							</ul></li>
+
+					</ul>
+				</div>
 			</div>
-			<div class="collapse navbar-collapse" id="navbar-collase-1">
-				<ul class="nav navbar-nav navbar-right">
+		</nav>
 
-					<li><a href="#about">About</a></li>
-					<li><a href="#skills">Skills</a></li>
-					<li><a href="#">Work</a></li>
-					<li class="dropdown"><a data-toggle="dropdown"
-						class="dropdown-toggle" href="#">Connect with Me <span
-							class="caret"></span></a>
-						<ul role="menu" class="dropdown-menu list-inline">
-							<li><a href="mailto:shivam.tripathi3@outlook.com"><div
-										class="morph nav-pic">
-										<img src="img/eml.png" alt="E-mail" class="icon-pic"></img>
-									</div></a></li>
-							<li><a
-								href="https://www.linkedin.com/in/shivam-tripathi-4b56606a">
-									<div class="morph nav-pic">
-										<img src="img/ln.png" alt="LinkedIn" class="icon-pic"></img>
-									</div>
-							</a></li>
-							<li><a href="https://www.facebook.com/shivamtheknight"><div
-										class="morph nav-pic">
-										<img src="img/fb.png" alt="Facebook" class="icon-pic"></img>
-									</div></a></li>
-						</ul></li>
-
-				</ul>
+		<div class="container-fluid ">
+			<div class="home home-animate">
+				<h1>&#123;Shivam Tripathi&#125;</h1>
+				<p>
+					<strong>&lt;</strong>Web Designer<strong>&#47;&gt;</strong>
+				</p>
+				<p>
+					<strong>&lt;</strong>Full Stack Java developer<strong>&#47;&gt;</strong>
+				</p>
 			</div>
-		</div>
-	</nav>
-
-		<div class="page-header home">
-			<h1>Shivam Tripathi</h1>
-			<p>Web Designer and Full Stack Java developer</p>
 		</div>
 
 	</div>
