--- a/index.html
+++ b/index.html
@@ -56,23 +56,18 @@
 		<a class="container-title">About me</a>
 		<div class="jumbotron">
 
-			<p>
-				I am a passionate web developer(Full Stack), working as Senior
-				Software Engineer (living in Bangalore, Karnataka India).<br /> I
-				have worked on different enterprise web application for various
-				multinational clients.<br /> I like to work on emerging
-				technologies.I am able to work in a team or as an individual.<br />
-				I focus on user problems and provide genuine solutions.
-			</p>
-			<p>
-				In day to day work I enjoy working on complex web development work
-				using latest technologies and tools.<br /> I enjoy doing hands on
-				with new programming languages and frameworks.<br /> But by the end
-				of the day my daily deliverables matter most to me.
-			</p>
-			<p>I love to start my work with a cup of coffee and in between
-				the work I find time to relax my mind with connecting new people and
-				listening to the music.</p>
+			<p>I am a passionate web developer(Full Stack), working as a Senior Software Engineer (living in Bangalore, Karnataka India).<br/>
+        I have worked on different enterprise web applications for various multinational clients.<br/>
+        I like to work on emerging techntologies. I have not only been a team player but also an individual contributor to complete the tasks.<br/>
+        I focus on user problems and put my whole effort to provide the genuine solutions.
+        </p>
+        <p>
+          In day to day work I enjoy working on complex web development tasks using latest technologies and tools.<br/>
+          I enjoy doing hands on with new programming languages and frameworks.<br/>
+          But by the end of the day my daily deliverables matter most to me.
+        </p>
+        <p>I love to start my work with a cup of coffee and in between the work I find time to relax my mind with connecting new people and listening to the music.</p>
+          <p><a href="#skills" class="label label-primary">My Skills</a></p>
 		</div>
 	</div>
 	<div class="container abt" id="skills">
