scroll fix in js and skill area fixed

--- a/index.html
+++ b/index.html
@@ -72,16 +72,12 @@
 	</div>
 	<div class="container abt" id="skills">
 		<a class="container-title">My Skills</a>
-		<div class="media">
-			<div class="media-left media-middle">
-				<h1>
-					<span class="label label-primary">Language</span><br /> <em></em>
-					<br /> <span class="label label-info"> Frameworks</span>
-				</h1>
-
+		<div class="panel panel-success">
+			<div class="panel-heading">
+				<div class="panel-heading">	Language</div>
 			</div>
-			<div class="media-body">
-				<ul class="skill-list ">
+			<div class="panel-body">
+				<ul class="list-inline skill-list">
 					<li class="">J2EE</li>
 					<li class="">HTML5</li>
 					<li class="">CSS3</li>
@@ -89,7 +85,6 @@
 					<li class="">Javascript</li>
 					<li class="">Bootstrap</li>
 					<li class="">Spring3.0</li>
-
 					<li class="">Hibernate</li>
 					<li class="">JSF2.0 (Primefaces)</li>
 					<li class="">AngularJS</li>
@@ -99,34 +94,32 @@
 				</ul>
 			</div>
 		</div>
-
-
 	</div>
 	
-	<footer class="footerMe">
+	
 
-		<div class="container-fluid" id="connectMe">
+		<div class="container-fluid footerMe" id="connectMe">
 			<p>Do you find my profile interesting?</p>
 			<ul class="list-inline">
 				<li><a href="mailto:shivam.tripathi3@outlook.com">
 						<div class="morph nav-pic">
-							<img src="img/eml.png" alt="E-mail" class="icon-pic"></img>
+							<img src="img/eml.png" alt="E-mail" class="icon-pic img-responsive"></img>
 						</div>
 				</a></li>
 				<li><a
 					href="https://www.linkedin.com/in/shivam-tripathi-4b56606a">
 						<div class="morph nav-pic">
-							<img src="img/ln.png" alt="LinkedIn" class="icon-pic"></img>
+							<img src="img/ln.png" alt="LinkedIn" class="icon-pic img-responsive"></img>
 						</div>
 				</a></li>
 				<li><a href="https://www.facebook.com/shivamtheknight">
 						<div class="morph nav-pic">
-							<img src="img/fb.png" alt="Facebook" class="icon-pic"></img>
+							<img src="img/fb.png" alt="Facebook" class="icon-pic img-responsive"></img>
 						</div>
 				</a></li>
 				<li><a href="https://www.facebook.com/shivamtheknight">
 						<div class="morph nav-pic">
-							<img src="img/insta.png" alt="Instagram" class="icon-pic"></img>
+							<img src="img/insta.png" alt="Instagram" class="icon-pic img-responsive"></img>
 						</div>
 				</a></li>
 			</ul>
@@ -134,7 +127,7 @@
 				(Part/full time)</p>
 			
 		</div>
-	</footer>
+	
 	<div class="scroll-page">
 		<a href="#home"><img alt="Back" src="img/btp.png"
 			class="img-fluid"></a>
