Skills and responsive design

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Shivam Tripathi</title>
+<title>Shivam Tripathi-Web/Full Stack Developer</title>
 <link rel="stylesheet" href="css/shivam-code.css">
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"
 	integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
@@ -71,10 +71,10 @@
 		</div>
 	</div>
 	<div class="container abt" id="skills">
-		<a class="container-title">My Skills</a>
-		<div class="panel panel-success">
+		<div class="col-md-6">
+			<div class="panel panel-success">
 			<div class="panel-heading">
-				<div class="panel-heading">	Language</div>
+				<div class="panel-heading"><h2>Language</h2></div>
 			</div>
 			<div class="panel-body">
 				<ul class="list-inline skill-list">
@@ -93,6 +93,21 @@
 					<li class="">Perl</li>
 				</ul>
 			</div>
+		</div>
+		</div>
+		<div class="col-md-6">
+			<div class="panel panel-success">
+			<div class="panel-heading">
+				<div class="panel-heading"><h3>Work Experience</h3></div>
+			</div>
+			<div class="panel-body">
+				<ul class="list-inline skill-list">
+					<li class="">Senior Software Engineer in EY (Working from Dec 2016)</li>
+					<li class="">Application Developer Analyst in Accenture (July2016 - Dec2016)</li>
+					<li class="">Software Engineer Development Associate in Dell (Jan2013 - Jan2015)</li>
+				</ul>
+			</div>
+		</div>
 		</div>
 	</div>
 	
