Changes in My name title

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
 		<div class="container-fluid ">
 			<div class="home home-animate">
-				<h1>&#123;Shivam Tripathi&#125;</h1>
+				<h1>&#123; <span class="glyphicon glyphicon-option-horizontal"></span> Shivam Tripathi <span class="glyphicon glyphicon-option-horizontal"></span>&#125;</h1>
 				<p>
 					<strong>&lt;</strong>Web Designer<strong>&#47;&gt;</strong>
 				</p>
