--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		<a class="container-title">About me</a>
 		<div class="jumbotron">
 
-			<p>I am a passionate web developer(Full Stack), working as a Senior Software Engineer (living in Bangalore, Karnataka India).<br/>
+			<p>I am a passionate web developer (Full Stack), working as a Senior Software Engineer (living in Bangalore, Karnataka India).<br/>
         I have worked on different enterprise web applications for various multinational clients.<br/>
         I like to work on emerging techntologies. I have not only been a team player but also an individual contributor to complete the tasks.<br/>
         I focus on user problems and put my whole effort to provide the genuine solutions.
@@ -64,47 +64,65 @@
         <p>
           In day to day work I enjoy working on complex web development tasks using latest technologies and tools.<br/>
           I enjoy doing hands on with new programming languages and frameworks.<br/>
-          But by the end of the day my daily deliverables matter most to me.
+          But by the end of the day my daily deliverables matter most to me. Many times I have taken project responsibility and delivered on my own.
         </p>
         <p>I love to start my work with a cup of coffee and in between the work I find time to relax my mind with connecting new people and listening to the music.</p>
           
 		</div>
 	</div>
 	<div class="container abt" id="skills">
-		<div class="col-md-6">
+		<div class="col-md-4">
 			<div class="panel panel-success">
 			<div class="panel-heading">
 				<div class="panel-heading"><h2>Language</h2></div>
 			</div>
 			<div class="panel-body">
 				<ul class="list-inline skill-list">
-					<li class="">J2EE</li>
-					<li class="">HTML5</li>
-					<li class="">CSS3</li>
-					<li class="">jquery</li>
-					<li class="">Javascript</li>
-					<li class="">Bootstrap</li>
-					<li class="">Spring3.0</li>
-					<li class="">Hibernate</li>
-					<li class="">JSF2.0 (Primefaces)</li>
-					<li class="">AngularJS</li>
-					<li class="">JSP</li>
-					<li class="">Servlet</li>
-					<li class="">Perl</li>
+					<li>J2EE</li>
+					<li >HTML5</li>
+					<li >CSS3</li>
+					<li >jquery</li>
+					<li >Javascript</li>
+					<li >Bootstrap</li>
+					<li >Spring3.0</li>
+					<li >Hibernate</li>
+					<li >JSF2.0 (Primefaces)</li>
+					<li >AngularJS</li>
+					<li >JSP</li>
+					<li >Servlet</li>
+					<li >Perl</li>
 				</ul>
 			</div>
 		</div>
 		</div>
-		<div class="col-md-6">
+		<div class="col-md-4">
+			<div class="panel panel-success">
+			<div class="panel-heading">
+				<div class="panel-heading"><h3>Tool</h3></div>
+			</div>
+			<div class="panel-body">
+				<ul class="list-inline skill-list">
+					<li >Eclipse</li>
+					<li>Sonar</li>
+					<li>SVN</li>
+					<li>Github</li>
+					<li>jenkins</li>
+					<li>Putty</li>
+					<li>Toad</li>
+				</ul>
+			</div>
+		</div>
+		</div>
+		<div class="col-md-4">
 			<div class="panel panel-success">
 			<div class="panel-heading">
 				<div class="panel-heading"><h3>Work Experience</h3></div>
 			</div>
 			<div class="panel-body">
 				<ul class="list-inline skill-list">
-					<li class="">Senior Software Engineer in EY (Working from Dec 2016)</li>
-					<li class="">Application Developer Analyst in Accenture (July2016 - Dec2016)</li>
-					<li class="">Software Engineer Development Associate in Dell (Jan2013 - Jan2015)</li>
+					<li >Senior Software Engineer in EY (Working from Dec 2016)</li>
+					<li >Application Developer Analyst in Accenture (July2016 - Dec2016)</li>
+					<li >Software Engineer Development Associate in Dell (Jan2013 - Jan2015)</li>
 				</ul>
 			</div>
 		</div>
