--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 
 		<div class="container-fluid footerMe" id="connectMe">
 			<p>Do you find my profile interesting?</p>
-			<ul class="list-inline">
+			<ul class="list-inline" style="align-content: center;">
 				<li><a href="mailto:shivam.tripathi3@outlook.com">
 						<div class="morph nav-pic">
 							<img src="img/eml.png" alt="E-mail" class="icon-pic img-responsive"></img>
