--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 <script type="text/javascript" src="js/shivam-code.js"></script>
 </head>
 <body>
-	<div class="container-fluid" id="home">
+	<div class="container" id="home">
 		<nav class="navbar navbar-static-top navbar-default" role="navigation">
-			<div class="container-fluid">
+			<div class="container">
 				<div class="navbar-header">
 					<!-- <div class="home-logo">
 				<a href="#home"><img alt="home" src="img/home.png"></a> </div> -->
@@ -39,7 +39,7 @@
 			</div>
 		</nav>
 
-		<div class="container-fluid ">
+		<div class="container ">
 			<div class="home home-animate">
 				<h1>&#123; <span class="glyphicon glyphicon-option-horizontal"></span> Shivam Tripathi <span class="glyphicon glyphicon-option-horizontal"></span>&#125;</h1>
 				<p>
@@ -52,7 +52,7 @@
 		</div>
 
 	</div>
-	<div class="container-fluid abt" id="about">
+	<div class="container abt" id="about">
 		<a class="container-title">About me</a>
 		<div class="jumbotron">
 
@@ -131,7 +131,7 @@
 	
 	
 
-		<div class="container-fluid footerMe" id="connectMe">
+		<div class="container footerMe" id="connectMe">
 			<p>Do you find my profile interesting?</p>
 			<ul class="list-inline" style="align-content: center;">
 				<li><a href="mailto:shivam.tripathi3@outlook.com">
