--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		</div>
 
 	</div>
-	<div class="container abt" id="about">
+	<div class="container" id="about">
 		<a class="container-title">About me</a>
 		<div class="jumbotron">
 
@@ -70,7 +70,7 @@
           
 		</div>
 	</div>
-	<div class="container abt" id="skills">
+	<div class="container" id="skills">
 		<div class="col-md-4">
 			<div class="panel panel-success">
 			<div class="panel-heading">
