--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
 						<li><a href="#about">About</a></li>
 						<li><a href="#skills">Skills</a></li>
-						<li><a href="#">Work</a></li>
+						<li><a href="#skills">Work</a></li>
 						<li><a href="#connectMe">Connect</a></li>
 					</ul>
 				</div>
