--- a/index.html
+++ b/index.html
@@ -19,10 +19,7 @@
 		<nav class="navbar navbar-static-top navbar-default" role="navigation">
 			<div class="container">
 				<div class="navbar-header">
-					<!-- <div class="home-logo">
-				<a href="#home"><img alt="home" src="img/home.png"></a> </div> -->
-					<button type="button" class="navbar-toggle collapsed"
-						data-toggle="collapse" data-target="#navbar-collase-1">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collase-1">
 						<span class="sr-only"></span> <span class="icon-bar"></span> <span
 							class="icon-bar"></span> <span class="icon-bar"></span>
 					</button>
